# scientist_ai

./: .gitignore  API_FRONTEND_BACKEND_DIFF.md  FRONTEND_TODO.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: experiment_planner.py  experiment_planner_economics.py  feedback_relevance.py  literature_qc.py
backend/app/api/: conversations.py  debug_tavily.py  deps.py  errors.py  experiment_plan.py  feedback.py  generate_plan.py  health.py  literature_review.py  middleware.py  openapi_extra.py  openapi_meta.py  plans.py  provider_key_context.py  provider_settings.py
backend/app/clients/: openai_client.py  switching_clients.py  tavily_client.py
backend/app/config/: settings.py  source_tiers.py  source_tiers.yaml
backend/app/observability/: logging.py  timing.py
backend/app/prompts/: experiment_planner.md  feedback_relevance.md  literature_qc.md  loader.py
backend/app/runtime/: novelty_gate.py  orchestrator.py  pipeline_state.py
backend/app/schemas/: errors.py  experiment_plan.py  feedback.py  hypothesis.py  literature_qc.py  openai_structured_model.py  pipeline_http.py  responses.py
backend/app/storage/: __init__.py  db.py  feedback_repo.py  literature_review_repo.py  models.py  plans_repo.py  provider_api_keys_repo.py
backend/app/verification/: catalog_resolver.py  citation_resolver.py  grounding.py  miqe_checklist.py
backend/scripts/: check.ps1
backend/tests/: conftest.py  test_readme.py  test_smoke.py
backend/tests/agents/: test_experiment_planner.py  test_experiment_planner_economics.py  test_feedback_relevance.py  test_literature_qc.py
backend/tests/api/: test_debug_tavily.py  (+12 more)
(+263 files in other folders)
