[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-scientist-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.136.1,<0.137",
  "uvicorn[standard]>=0.44.0,<0.45",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.10.1,<3",
  "openai>=2.32.0,<3",
  "tavily-python>=0.7.23,<0.8",
  "sqlalchemy[asyncio]>=2.0.49,<2.1",
  "aiosqlite>=0.21.0,<0.22",
  "structlog>=25.5.0,<26",
  "httpx>=0.28,<0.29",
  "tenacity>=9.0,<10",
  "PyYAML>=6.0,<7",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-recording>=0.13.4,<0.14",
  "vcrpy>=8.1.1,<9",
  "respx>=0.23.1,<0.24",
  "ruff>=0.15.8,<0.16",
  "mypy>=1.20.0,<2",
  "types-PyYAML>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
  "live: opt-in tests that hit real APIs and re-record cassettes; off in CI",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC", "S", "RUF"]
ignore = [
  "S101",  # asserts in tests are intended
  "N818",  # domain exception names follow the plan ("TavilyUnavailable", etc.)
]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# tavily-python ships no `py.typed` marker; treat as untyped so the import
# does not require a `# type: ignore[import-untyped]` on every site.
module = ["tavily", "tavily.*"]
ignore_missing_imports = true
follow_imports = "skip"
